--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <script src="app.js"></script>
     <table>
         <tr>
-            <td><button id="b1" onclick="hbj('b1')"></button></td>
-            <td><button id="b2" onclick="hbj('b2')"></button></td>
-            <td><button id="b3" onclick="hbj('b3')"></button></td>
+            <td><button id="b1" onclick="verify('b1')"></button></td>
+            <td><button id="b2" onclick="verify('b2')"></button></td>
+            <td><button id="b3" onclick="verify('b3')"></button></td>
         </tr>
         <tr>
-            <td><button id="b4" onclick="hbj('b4')"></button></td>
-            <td><button id="b5" onclick="hbj('b5')"></button></td>
-            <td><button id="b6" onclick="hbj('b6')"></button></td>
+            <td><button id="b4" onclick="verify('b4')"></button></td>
+            <td><button id="b5" onclick="verify('b5')"></button></td>
+            <td><button id="b6" onclick="verify('b6')"></button></td>
         </tr>
         <tr>
-            <td><button id="b7" onclick="hbj('b7')"></button></td>
-            <td><button id="b8" onclick="hbj('b8')"></button></td>
-            <td><button id="b9" onclick="hbj('b9')"></button></td>
+            <td><button id="b7" onclick="verify('b7')"></button></td>
+            <td><button id="b8" onclick="verify('b8')"></button></td>
+            <td><button id="b9" onclick="verify('b9')"></button></td>
         </tr>
     </table>
-    <h1 id="res">hbjkn</h1>
+    <h1 id="res">x o x o game :D </h1>
 </body>
 </html>
