--- a/index.html
+++ b/index.html
@@ -8,23 +8,28 @@
 </head>
 <body>
     <script src="app.js"></script>
+    <h1>x o x o game :D </h1>
+    <h1 id="res"></h1>
+    <div class="table">
     <table>
         <tr>
-            <td><button id="b1" onclick="verify('b1')"></button></td>
-            <td><button id="b2" onclick="verify('b2')"></button></td>
-            <td><button id="b3" onclick="verify('b3')"></button></td>
+            <td><button id="b1" onclick="display('b1')"></button></td>
+            <td><button id="b2" onclick="display('b2')"></button></td>
+            <td><button id="b3" onclick="display('b3')"></button></td>
         </tr>
         <tr>
-            <td><button id="b4" onclick="verify('b4')"></button></td>
-            <td><button id="b5" onclick="verify('b5')"></button></td>
-            <td><button id="b6" onclick="verify('b6')"></button></td>
+            <td><button id="b4" onclick="display('b4')"></button></td>
+            <td><button id="b5" onclick="display('b5')"></button></td>
+            <td><button id="b6" onclick="display('b6')"></button></td>
         </tr>
         <tr>
-            <td><button id="b7" onclick="verify('b7')"></button></td>
-            <td><button id="b8" onclick="verify('b8')"></button></td>
-            <td><button id="b9" onclick="verify('b9')"></button></td>
+            <td><button id="b7" onclick="display('b7')"></button></td>
+            <td><button id="b8" onclick="display('b8')"></button></td>
+            <td><button id="b9" onclick="display('b9')"></button></td>
         </tr>
     </table>
-    <h1 id="res">x o x o game :D </h1>
+</div>
+
+    
 </body>
 </html>
